--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,7 @@
     <dimen name="photo_height">500dp</dimen>
     <dimen name="description_text_size">15sp</dimen>
     <dimen name="bottom_sheet_height">20dp</dimen>
+    <dimen name="margin_bottom_epic_choose_date_tv">6dp</dimen>
+    <dimen name="epic_caption_padding">5dp</dimen>
+    <dimen name="epic_recycler_items_selector">1dp</dimen>
 </resources>
