--- a/app/src/main/res/layout/epic_photos_fragment.xml
+++ b/app/src/main/res/layout/epic_photos_fragment.xml
@@ -12,7 +12,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/epic_calendarIcon_plus_chosen_date_linear_layout"
+        app:layout_constraintBottom_toTopOf="@id/epic_calendar_icon_image_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textStyle="italic"
@@ -22,30 +22,38 @@
         android:layout_marginBottom="@dimen/margin_bottom_epic_choose_date_tv"
         android:layout_marginTop="@dimen/margin_bottom_epic_choose_date_tv"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/epic_calendarIcon_plus_chosen_date_linear_layout"
-        android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/choose_epic_date_tv"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="@dimen/margin_bottom_epic_choose_date_tv">
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:id="@+id/epic_calendarIcon_plus_chosen_date_linear_layout"-->
+<!--        android:orientation="horizontal"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/choose_epic_date_tv"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        android:layout_marginBottom="@dimen/margin_bottom_epic_choose_date_tv">-->
 
         <ImageView
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/view_width_for_constraint_percent"
             android:layout_height="wrap_content"
+            app:layout_constraintWidth_percent="0.4"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/choose_epic_date_tv"
+            app:layout_constraintEnd_toStartOf="@id/user_chosen_date_epic_tv"
             android:id="@+id/epic_calendar_icon_image_view"
-            android:src="@drawable/ic_baseline_edit_calendar_24"/>
+            android:src="@drawable/ic_baseline_edit_calendar_24"
+            tools:ignore="Suspicious0dp" />
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/view_width_for_constraint_percent"
             android:layout_height="wrap_content"
+            app:layout_constraintWidth_percent="0.6"
+            app:layout_constraintTop_toBottomOf="@id/choose_epic_date_tv"
+            app:layout_constraintStart_toEndOf="@id/epic_calendar_icon_image_view"
+            app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/user_chosen_date_epic_tv"
             android:textSize="@dimen/description_text_size"
             android:textStyle="italic"/>
 
-    </LinearLayout>
-
+<!--    </LinearLayout>-->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/epic_fragment_recycler_view"
         android:layout_width="match_parent"
@@ -53,7 +61,7 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/epic_calendarIcon_plus_chosen_date_linear_layout" />
+        app:layout_constraintTop_toBottomOf="@id/epic_calendar_icon_image_view" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
