--- a/app/src/main/res/layout/epic_photos_fragment.xml
+++ b/app/src/main/res/layout/epic_photos_fragment.xml
@@ -14,9 +14,11 @@
         android:layout_marginTop="@dimen/margin_bottom_epic_choose_date_tv"
         android:layout_marginBottom="@dimen/margin_bottom_epic_choose_date_tv"
         android:text="@string/tap_calendar_icon_and_choose_the_date"
-        android:textColor="@color/black"
+        android:textColor="@color/light_black"
+        android:fontFamily="@font/karla"
         android:textSize="@dimen/description_text_size"
-        android:textStyle="italic"
+        android:textStyle="bold"
+        android:gravity="center"
         app:layout_constraintBottom_toTopOf="@id/epic_calendar_icon_image_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,7 +40,10 @@
         android:layout_width="@dimen/view_width_for_constraint_percent"
         android:layout_height="wrap_content"
         android:textSize="@dimen/description_text_size"
-        android:textStyle="italic"
+        android:fontFamily="@font/karla"
+        android:textColor="@color/grey_black"
+        android:textStyle="normal"
+        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/epic_calendar_icon_image_view"
         app:layout_constraintTop_toBottomOf="@id/choose_epic_date_tv"
