--- a/app/src/main/res/layout/notes_recycler_view_simple_item.xml
+++ b/app/src/main/res/layout/notes_recycler_view_simple_item.xml
@@ -11,6 +11,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:textStyle="bold"
+        android:fontFamily="@font/karla"
+        android:textColor="@color/grey_black"
         android:textSize="@dimen/description_text_size"/>
     <TextView
         android:layout_width="wrap_content"
@@ -20,6 +22,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toStartOf="@id/add_item_icon"
         android:textSize="@dimen/description_text_size"
+        android:fontFamily="@font/karla"
+        android:textColor="@color/grey_black"
         android:textStyle="italic"/>
     <ImageView
         android:layout_width="wrap_content"
