--- a/app/src/main/res/layout/photo_from_mars_fragment.xml
+++ b/app/src/main/res/layout/photo_from_mars_fragment.xml
@@ -20,29 +20,37 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingBottom="@dimen/epic_caption_padding"
                 android:text="@string/choose_the_date_from_the_period_of_fhaz_camera_mission_06_08_2012_03_06_2015"
-                android:textColor="@color/black"
+                android:textColor="@color/light_black"
+                android:fontFamily="@font/karla"
                 android:textSize="@dimen/description_text_size"
-                android:textStyle="italic" />
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:id="@+id/calendarIcon_plus_chosen_date_tv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingBottom="@dimen/epic_caption_padding"
                 android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/calendar_icon_image_view"
-                    android:layout_width="wrap_content"
+                    android:layout_width="@dimen/view_width_for_constraint_percent"
+                    android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_baseline_edit_calendar_24" />
 
                 <TextView
                     android:id="@+id/user_chosen_date_tv"
-                    android:layout_width="wrap_content"
+                    android:layout_width="@dimen/view_width_for_constraint_percent"
                     android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:gravity="center"
                     android:textSize="@dimen/description_text_size"
-                    android:textStyle="italic" />
+                    android:fontFamily="@font/karla"
+                    android:textColor="@color/grey_black"
+                    android:textStyle="normal"/>
 
             </LinearLayout>
 
@@ -65,8 +73,10 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/photo_from_mars_id"
+                    android:fontFamily="@font/karla"
+                    android:textColor="@color/grey_black"
                     android:textSize="@dimen/text_size"
-                    android:textStyle="italic" />
+                    android:textStyle="normal" />
             </LinearLayout>
 
         </LinearLayout>
